# compleer

./: README.md  pyproject.toml
demo files/: ui1.py  ui2.py
src/compleer/: analyzer.py  compleer.py  data_structures.py  genai_prediction.py  key_grabber.py  main.py  prediction_engine.py  setence_collector.py  test.py  ui.py  word_seperator.py  word_validator.py
